Add a custom cursor when adding a pin to any map

--- a/app/views/admin/stores/_enterprise.html.erb
+++ b/app/views/admin/stores/_enterprise.html.erb
@@ -89,7 +89,7 @@
   <input type="hidden" value="<%= @related_store.latitude %>" class="js-previous-latitude-input" />
   <input type="hidden" value="<%= @related_store.longitude %>" class="js-previous-longitude-input" />
   <% end %>
-  <div id="map" class="c-map-field js-map-field"></div>
+  <div id="map" class="c-map-field cursor-enterprise js-map-field"></div>
   <p class="mb-0 form-text font-s">
     <% if action_name != 'show' %>
     <%= t('views.shared.click_map_to_update') %>
