--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -119,6 +119,26 @@ a:not(.btn-primary):not(.btn-secondary):not(.btn-black):not(.btn-danger) {
   box-shadow: 0 1px 5px 0 $grey-2;
 }
 
+.cursor-enterprise {
+  cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="33" width="33"><circle cx="16.5" cy="16.5" r="15" stroke="white" stroke-width="3" fill="rgb(245,207,0)"/></svg>')
+      16.5 16.5,
+    crosshair;
+
+  .mapboxgl-canvas-container.mapboxgl-interactive {
+    cursor: inherit;
+  }
+}
+
+.cursor-community {
+  cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="33" width="33"><path d="M16.5 0L33 33H0z" stroke="white" stroke-width="3" fill="rgb(245,207,0)"/></svg>')
+      16.5 16.5,
+    crosshair;
+
+  .mapboxgl-canvas-container.mapboxgl-interactive {
+    cursor: inherit;
+  }
+}
+
 // The following styles are necessary for the dialog library
 @keyframes dialog-fade-in {
   from {
