--- a/app/views/pins/_enterprise.html.erb
+++ b/app/views/pins/_enterprise.html.erb
@@ -61,7 +61,7 @@
 
 <% if action?('editing') || action?('fixing') %>
 <div class="form-group">
-  <div id="map" class="c-map-field js-map-field"></div>
+  <div id="map" class="c-map-field cursor-enterprise js-map-field"></div>
   <p class="mb-0 form-text font-s">
     <%= t('views.shared.click_map_to_update') %>
   </p>
