--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -40,7 +40,25 @@ $border-color-1: $grey-1;
 $border-color-2: $primary;
 $border-color-3: $white;
 
-// feSpecularLighting
+// Typography
+$font-family-base: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
+  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+
+$font-size-base: rem(20);
+$font-size-s: rem(18);
+
+$line-height-base: 1.33;
+
+// Grid containers
+
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 950px,
+);
+
+// Spacing
+
 $spacers: map-merge(
   (
     0: 0,
@@ -65,23 +83,6 @@ $spacers: map-merge(
     ),
   ),
   $spacers
-);
-
-// Typography
-$font-family-base: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
-  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-
-$font-size-base: rem(20);
-$font-size-s: rem(18);
-
-$line-height-base: 1.33;
-
-// Grid containers
-
-$container-max-widths: (
-  sm: 540px,
-  md: 720px,
-  lg: 960px,
 );
 
 // Buttons
