Changed the welcome email to address the user by name

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p><%= t('.greeting', recipient: @email) %></p>
+<p><%= t('.greeting', recipient: @user&.name) %></p>
 
 <p><%= t('.instruction') %></p>
 
